[project]
name = "svetlanaddos4rubitime"
version = "0.1.0"
description = "Backend4rubitime"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "qrcode>=8.2",
    "redis>=7.1.0",
    "sqlmodel>=0.0.31",
]
